<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">涂步</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="map_filter_all">全部</string>
    <string name="map_filter_scenic">景点</string>
    <string name="map_filter_room">酒店</string>
    <string name="map_filter_food">美食</string>
    <string name="error_map_loading">地图加载失败</string>
    <string name="zwing">二维码扫描</string>
    <string name="location">定点</string>
    
    <string name="wz">温州</string>
    
    <string name="title">标题</string>
    
    <string name="main_date">约吧</string>
    <string name="main_recreation">娱乐</string>
    
    <string name="main_scenic_th">特惠游</string>
    <string name="main_scenic_hd">活动游</string>
    <string name="main_scenic_ss">山水游</string>
    <string name="main_scenic_gc">古村游</string>
    
    <string name="secnic_place_yj">永嘉</string>
    <string name="secnic_place_yq">乐清</string>
    <string name="secnic_place_dt">洞头</string>
    <string name="secnic_place_wc">文成</string>
    <string name="scenic_place_recommend">周边推荐</string>
    <string name="scenic_place_scenic">雁荡山</string>
    <string name="scenic_place_nearby">离我最近</string>
    <string name="scenic_place_where">驴友去哪了</string>
    
    <!-- 我的界面 -->
    <string name="my_login">请登录</string>
    <string name="my_map">离线地图</string>
    <!-- 登陆界面 -->
    <string name="login_phone">请输入您的手机号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="login_repassword">重复密码：</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    
    <!-- 注册界面 -->
    <string name="register_register">注册</string>
    <string name="register_back">返回</string>
    <string name="register_nickname">用户昵称：</string>
    <string name="register_phone">请输入您的手机号</string>
    <string name="register_password">请输入您的密码</string>
    <string name="register_repassword">请输入再输入一次密码</string>
    
    <!-- 完善信息 -->
    <string name="perfection_title">完善信息</string>
    <string name="perfection_nickname">昵称:</string>
    <string name="perfection_birthday">生日:</string>
    <string name="perfection_constellation">星座:</string>
    <string name="perfection_gender">性别:</string>
    <string name="perfection_male">帅哥</string>
    <string name="perfection_female">靓女</string>
    <string name="perfection_affective_state">情感状态:</string>
    <string name="perfection_hobbies">兴趣爱好:</string>
    <string name="perfection_haunt">经常出没:</string>
    
    
    <!-- 通用按钮 -->
    <string name="bt_submit">提交</string>
    <string name="bt_back">返回</string>
    <string name="money">￥.</string>
    <!-- 百度地图 -->
	<string name="map_bt_simulate">模拟导航</string>
	<string name="map_bt_real">真实导航</string>
	
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    
    <!-- 首页 -->
	<string name="main_scenic">景区</string>
	<string name="main_navigation">景点导航</string>
	<string name="main_scenicmap">景区地图</string>
	<string name="main_location">定位取点</string>
	
	<!-- 景区 -->
	<string name="scenic_title">景区列表</string>
	<string name="scenic_attention">107550人关注</string>
	<string name="scenic_walk">说走就走</string>
	<string name="scenic_qi">起</string>
	<string name="scenic_name">永嘉书院</string>
	<string name="scenic_address">地址：浙江温州永嘉沙头镇珠岸村永嘉书院</string>
	<string name="scenic_purchase">团购活动：</string>
	<string name="scenic_purchase_num">12</string>
	<string name="scenic_purchase_person">人</string>
	<string name="scenic_intro">景区介绍</string>
	<string name="scenic_buy">门票购买</string>
	<!-- 景区门票 -->
	<string name="scenic_ticket_title">门票购买</string>
	<string name="scenic_ticket_address">地址：</string>
	<string name="scenic_ticket_phone">电话：</string>
	<string name="scenic_ticket_sales_tv">月销量</string>
	<string name="scenic_ticket_buy">购买</string>
	<string name="dish_sales_tv">月销量</string>
    <string name="dish_price_tv">元/份</string>
    <string name="dish_num">1</string>
    <!-- 门票购买 -->
    <string name="ticket_order_address">+新增送餐地址</string>
    <string name="ticket_order_total">总计：</string>
    <string name="ticket_order_name">联系人姓名:</string>
    <string name="ticket_order_phone">联系人电话</string>
    
    <!-- 订单列表 -->
    <string name="order_list_title">订单列表</string>
    <string name="order_list_all">全部</string>
    <string name="order_list_no">未消费</string>
    <string name="order_list_done">已消费</string>
</resources>
