<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical" >
	
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_nickname" />

            <EditText
                android:id="@+id/perfection_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_birthday" />

            <EditText
                android:id="@+id/perfection_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_constellation" />

            <TextView
                android:id="@+id/perfection_constellation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_gender" />

            <RadioGroup
                android:id="@+id/perfection_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/perfection_male"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/perfection_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfection_male" />

                <RadioButton
                    android:id="@+id/perfection_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perfection_female" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_affective_state" />

            <EditText
                android:id="@+id/perfection_affective_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_hobbies" />

            <EditText
                android:id="@+id/perfection_hobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/list_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfection_haunt" />

            <EditText
                android:id="@+id/perfection_haunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

</RelativeLayout>