<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue" >

        <TextView
            android:id="@+id/title"
            style="@style/main_title_style"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/title" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/bt_back" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/edit"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_rl"
        android:padding="5dp" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:drawableEnd="@drawable/abc_ic_search_api_holo_light"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView1"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText1"
            android:layout_alignBottom="@+id/editText1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="18dp"
            android:drawableLeft="@drawable/zb3"
            android:gravity="center"
            android:text="@string/wz"
            android:textColor="@color/gray3"
            android:textSize="@dimen/text_size_middle" />
    </RelativeLayout>

</RelativeLayout>